Proper fix for invoices tab not showing in responsive mode.

--- a/assets/stylesheets/contracts.css
+++ b/assets/stylesheets/contracts.css
@@ -136,6 +136,3 @@ div.flash.contract_warning {
 
 .icon-link { background-image: url(../../../images/link.png); }
 
-#content .tabs {
-  clear: both;
-}
